--- a/public/404.html
+++ b/public/404.html
@@ -2,23 +2,23 @@
 <html lang="en" class="js csstransforms3d">
 
 <head>
-  <meta charset="utf-8"> <meta name="description" content="Documentation for Hugo Learn Theme">
-<meta name="author" content="Mathieu Cornic">
- <link rel="shortcut icon" href="/images/logo-no.svg" type="image/x-icon" />
- 
+  <meta charset="utf-8"> <meta name="description" content="JanusRNA datasets">
+<meta name="author" content="Sinan U. Umu, PhD">
+ <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+<link rel="icon" href="/images/favicon.png" type="image/x-icon" /> 
   <title>404 Page not found</title>
   
    
-    <link href="/css/nucleus.css?1550497771" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1550497771" rel="stylesheet">
-    <link href="/css/hybrid.css?1550497771" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1550497771" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1550497771" rel="stylesheet">
-    <link href="/css/horsey.css?1550497771" rel="stylesheet">
-    <link href="/css/theme.css?1550497771" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1550497771" rel="stylesheet">
+    <link href="/css/nucleus.css?1550504127" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1550504127" rel="stylesheet">
+    <link href="/css/hybrid.css?1550504127" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1550504127" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1550504127" rel="stylesheet">
+    <link href="/css/horsey.css?1550504127" rel="stylesheet">
+    <link href="/css/theme.css?1550504127" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1550504127" rel="stylesheet">
     
-      <link href="/css/theme-mine.css?1550497771" rel="stylesheet">
+      <link href="/css/theme-mine.css?1550504127" rel="stylesheet">
     
 <style type="text/css">
     :root #header + #content > #left > #rlblock_left {
